# pandoc-figure-caption-patch

./: .gitignore  LICENSE  README.md  app.py  plot.yaml  pyproject.toml
src/pandoc_figure_caption_patch/: lib.py  main.py
tests/: example.md  test.py
